Use new octal notation `0oNNN` everywhere.

--- a/docs/programmers/tutorials/workflows/roles/gc3pie/tasks/main.yml
+++ b/docs/programmers/tutorials/workflows/roles/gc3pie/tasks/main.yml
@@ -27,7 +27,7 @@
   get_url:
     url: https://raw.githubusercontent.com/uzh/gc3pie/master/install.py
     dest: /var/tmp/install.py
-    mode: 0755
+    mode: 0o755
 
 - name: Run GC3Pie installer
   command:
